# nanoprobe-sim-lab

./: $null  .commit_msg.txt  .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .msg.txt  .pre-commit-config.yaml  .project_notes.md  .vercelignore  AUTO_PORTS_REPORT.md  CHANGELOG.md  CMakeLists.txt  CODE_QUALITY_REPORT_2026-04-10.md  COMPLETE_IMPROVEMENTS.md  CREATED_AT_FIX_REPORT_2026-04-09.md  DOCKER_PRODUCTION.md  FINAL_CODE_QUALITY_REPORT.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_REPORT_2026-03-14.md  FIXES_REPORT_2026-04-10.md  FRONTEND_VERSIONS.md  IMPROVEMENTS.md  IMPROVEMENTS_REPORT_2026-04-08.md  IMPROVEMENTS_REPORT_2026-04-08_ROUND2.md  IMPROVEMENTS_REPORT_2026-04-08_ROUND3.md  IMPROVEMENTS_REPORT_2026-04-08_v2.md  IMPROVEMENTS_REPORT_2026-04-10.md  INSTALL.md  LICENCE_RU  LICENSE  LICENSE_RU  MSK-ACTUALIZATION.md  Makefile  NASA_API_INTEGRATION.md  PWA_SUMMARY.md  QUICKSTART.md  (+151 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.qwen/: settings.json
api/: README.md  alerting.py  api_interface.py  data_exchange.py  database_init.py  dependencies.py  error_handlers.py  graphql_schema.py  health.py  integration.py  logging_config.py  main.py  metrics.py  rate_limiter.py  reverse_proxy.py  router_config.py  schemas.py  security_headers.py  state.py  sync_manager.py  validators.py  websocket_manager.py  websocket_server.py
components/cpp-spm-hardware-sim/: CMakeLists.txt  README.md  requirements.txt
components/cpp-spm-hardware-sim/include/: surface_model.h
components/cpp-spm-hardware-sim/src/: __init__.py  main.cpp  spm_simulator.py
config/: cache_config.json  config.json  optimization_config.json
data/: location_cache.json  nanoprobe.db-shm  nanoprobe.db-wal
deployment/: .env.example  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml
docs/: 01-nasa-api-key-guide.md  02-space-images-instruction.md  03-rtl-sdr-sstv-recording.md  10-startup-guide.md  11-auto-sync.md  12-unified-dashboard.md  20-security-testing.md  30-cicd-pipeline.md  31-consolidation-guide.md  32-database-optimization.md  33-docker-configuration.md  34-flask-to-nextjs-migration.md  35-monitoring-logging.md  36-performance-optimization.md  37-project-improvements-summary.md  38-rate-limiting-guide.md  39-security-hardening.md  40-performance-monitoring.md  41-mobile-application.md  50-deployment-guide.md  ADMIN.md  API.md  AUTO_PORTS.md  AUTO_SYNC.md  CODING_STANDARDS.md  DEVELOPER.md  LOAD_TESTING.md  NASA_API_KEY_GUIDE.md  ONBOARDING.md  README.md  RTL_SDR_SSTV_RECORDING.md  SECURITY_TESTING.md  SPACE_IMAGES_INSTRUCTION.md  STARTUP.md  SYNC.md  UI_IMPROVEMENTS.md  UNIFIED_DASHBOARD.md  UTILS_REORGANIZATION.md  api-examples.md  api_reference.html  (+5 more)
frontend/: .eslintrc.json  PWA_IMPLEMENTATION.md  generate_icons.py  next.config.js  package-lock.json  package.json  tailwind.config.ts
improvements-v2/: CONSOLIDATION_GUIDE.md  FLASK_TO_NEXTJS_MIGRATION.md  NASA_API_INTEGRATION.md  PROJECT_IMPROVEMENTS_SUMMARY.md  PWA_IMPLEMENTATION.md  RATE_LIMITING_GUIDE.md  README.md  SECURITY_HARDENING.md
legacy/: build_cpp.py  capture_sstv_mmsstv.py  check_pysstv.py  cleanup_project.py  format_code.py  improve_project.py  iss_tracker.py  rtl_sdr_noaa_capture.py  rtl_sdr_sstv_capture.py  rtlsdr_control_panel.py  run_monitoring_and_improvements.py  sstv_ground_station.py  validate_project.py
legal/: LICENCE  LICENCE_RU
migrations/: env.py
nanoprobe_sim_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output/: scan_results.txt  surface_model.txt
profiles/: performance_report_20260210_154656.json  profile_test_code_block_20260210_154622.txt
reports/: README.md  comprehensive_optimization_summary_20260210_162120.json  comprehensive_optimization_summary_20260210_162132.json
rtl_sdr_tools/: README.md  adsb_capture.py  adsb_receiver.py  adsb_tracker.py  am_airband.py  capture_sstv_mmsstv.py  fm_capture_simple.py  fm_multi_capture.py  fm_radio.py  fm_radio_capture.py  fm_radio_scanner.py  fm_radio_unified.py  fm_stereo_decoder.py  iss_tracker.py  listen_adsb.bat  listen_airband.py  listen_fm_radio.py  listen_rtl433.bat  listen_sstv.bat  pocsag_decoder.py  quick_scan_airband.py  raw_to_wav.py  rtl433_multi_scanner.py  rtl433_scanner.py  rtl_sdr_noaa_capture.py  rtl_sdr_sstv_capture.py  rtl_sdr_visualizer.py  rtlsdr_control_panel.py  sstv_ground_station.py  sstv_mmsstv_capture.py
scripts/: auto_backup.py  build_cpp.py  check_cyclic_imports.py  check_pysstv.py  check_zadig_drivers.bat  cleanup_project.py  deploy.py  deploy.sh  format_code.py  generate_ssl_certs.py  generate_ssl_certs.sh  improve_project.py  install-poetry.py  listen_airband.bat  listen_fm.bat  migrate_print_to_logging.py  migrate_sqlite_to_postgres.py  monitor.sh  project.py  rtl_sdr_full_power_test.py  run_api_no_redis.py  run_monitoring_and_improvements.py  run_project.bat  run_project.sh  scan_airband.bat  setup_rtlsdr_v4.sh  sort_project.py  validate_project.py
security/: auth_manager.py  data_encryption.py
templates/: dashboard.html  dashboard_unified.html  enhanced_dashboard.html  sstv_station.html
tests/: benchmark_api.py  load_test.py  run_all_tests.py  security_test.py  test_additional_api.py  test_admin_api.py  test_admin_cli.py  test_alerting_api.py  test_analysis_api.py  test_api.py  test_api_infrastructure.py  test_api_integration_full.py  test_api_routes.py  test_api_wave3.py  test_auth.py  test_auth_endpoints.py  test_backup_manager.py  test_batch_processor.py  test_cache_manager.py  test_circuit_breaker.py  test_cli_dashboard.py  test_comparison_api.py  test_config_manager.py  test_config_optimizer.py  test_config_validator.py  test_core_functionality.py  test_dashboard_realtime_api.py  test_data_exporter.py  test_data_integrity.py  test_data_validator.py  test_database.py  test_database_async.py  test_database_optimization.py  test_defect_analyzer.py  test_error_handler.py  test_external_routes.py  test_fm_radio_api.py  test_graphql_api.py  test_image_analyzer.py  test_improvements.py  (+45 more)
utils/: __init__.py  advanced_logger_analyzer.py  logger.py  (+59 more)
(+336 files in other folders)
