[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoprobe-sim-lab"
version = "1.0.0"
description = "Лаборатория моделирования нанозонда - комплексный научно-образовательный проект"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"
authors = [
    {name = "Школа программирования Maestro7IT", email = "maksimqwe42@mail.ru"}
]
keywords = [
    "nanoprobe",
    "simulation",
    "spm",
    "afm",
    "sstv",
    "science",
    "education"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "Pillow>=8.3.0",
    "PyYAML>=6.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "eventlet>=0.30.0",
    "psutil>=5.8.0",
    "jsonschema>=4.0.0",
    "pysstv>=0.2.0",
    "pytest>=6.0.0",
    "memory-profiler>=0.60.0",
    "objgraph>=3.5.0",
    "schedule>=1.2.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.0.0",
]
sdr = [
    "pyrtlsdr>=0.2.0",
]

[project.urls]
Homepage = "https://school-maestro7it.ru/"
Repository = "https://github.com/your-username/nanoprobe-sim-lab.git"
Documentation = "https://github.com/your-username/nanoprobe-sim-lab/docs"

[project.scripts]
nanoprobe = "src.cli.main:main"
nanoprobe-manager = "src.cli.project_manager:main"
nanoprobe-web = "src.web.web_dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*", "components*"]
exclude = ["tests*", "venv*", ".venv*", "build*", "dist*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "utils", "components"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
