[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoprobe-sim-lab"
description = "Laboratory for nanosatellite probe simulation"
version = "0.1.0"
authors = [
    {name = "Maksim Dupley", email = "maksim.dupley@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["nanosatellite", "simulation", "sdr", "sstv", "iss", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

# Основные зависимости - минимальный набор для запуска Backend API + основные функции
dependencies = [
    # CORE: Научные вычисления и анализ изображений
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.2.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "opencv-python>=4.9.0",

    # CORE: Валидация и конфигурация
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "email-validator>=2.1.0",

    # CORE: Мониторинг системы
    "psutil>=5.9.8",
    "prometheus-client>=0.20.0",

    # CORE: Визуализация и дашборды
    "plotly>=5.19.0",
    "seaborn>=0.13.2",

    # CORE: Генерация PDF отчётов
    "reportlab>=4.1.0",

    # CORE: Планировщик задач
    "schedule>=1.2.2",

    # BACKEND: FastAPI сервер
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "starlette>=0.37.0",

    # BACKEND: Аутентификация и безопасность
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",

    # BACKEND: Кэширование и HTTP клиент
    "redis>=5.0.3",
    "aiohttp>=3.9.3",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # BACKEND: Rate Limiting
    "slowapi>=0.1.9",

    # BACKEND: База данных и миграции
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",

    # BACKEND: WebSocket
    "websockets>=12.0",

    # BACKEND: Мониторинг и отслеживание ошибок
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=1.43.0",

    # BACKEND: Production сервер
    "gunicorn>=21.2.0",
]

# Опциональные зависимости
[project.optional-dependencies]
# SDR: Спутниковый захват (NOAA/Meteor) и SSTV
sdr = [
    "skyfield>=1.47",
    "pyrtlsdr>=0.3.3",  # Для работы с RTL-SDR через Python
]

# Полный набор с веб-интерфейсом и всеми возможностями
full = [
    "skyfield>=1.47",
    "pyrtlsdr>=0.3.3",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-wtf>=1.2.0",  # Для CSRF защиты и форм
]

# Инструменты разработки и тестирования
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",  # Для безопасности
    "safety>=2.3.0",   # Для проверки зависимостей
]

# Документация
docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nanoprobe-sim-lab"
Documentation = "https://github.com/yourusername/nanoprobe-sim-lab/wiki"
Repository = "https://github.com/yourusername/nanoprobe-sim-lab"
Issues = "https://github.com/yourusername/nanoprobe-sim-lab/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
    "docs*",
    "scripts*",
    "examples*",
    "*.egg-info*",
    "build*",
    "dist*",
]

[tool.setuptools.package-data]
"nanoprobe-sim-lab" = [
    "py.typed",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["nanoprobe_sim_lab", "utils", "api", "components", "src"]

[tool.mypy]
python-version = "3.11"
warn_return_any = true
warn_unused_configs = false
ignore_missing_imports = true
follow_imports = "silent"
